small fixes in the condition of command (or maybe more idk I forgot)
